Build modal window for comparing services - Fixed: The arrows on the left & right to scroll the services should be within the grey box. The grey box can be made bigger to fit the arrows - Fixed: In firefox, the project name doesn't fit when adding a service to a project.
Create search by discussions
- Fixed: The sorting both by Discussion & Replies does not function correctly. Discussion should be alphabetically. Replies should be by # of replies.
- Fixed: Add New Discussion should be a button w/ the same look as http://ge-dmc-01.thecreativeadvantage.net/community.php#/home. It should also function so that it opens up the add discussion modal

Update marketplace home
- Fixed: If a user selects the dots to advanced the modal instead of the arrows, the arrows do not update. For example, if the user selects the last dots, the right arrow should go away & the left arrow should show. If the user selects the first dot, the left arrow should go away & the right arrow should show.

--- a/app/styles/modules/_compare.scss
+++ b/app/styles/modules/_compare.scss
@@ -96,6 +96,7 @@
   }
   .compare-title{
     margin-right: 21px;
+    padding-left: 53px;
   }
   form:first-child{
     background-color: #efeced;
@@ -116,7 +117,7 @@
     md-dialog-content{
       overflow-y: hidden;
       overflow-x: hidden;
-      padding: 0 24px 24px 24px;
+      padding: 0 24px 24px 69px;
       max-width: 918px;
     }
     .compare-list-products{
@@ -131,7 +132,7 @@
           width: 33%;
           border-bottom: 1px solid #efeced;
           .select-block{
-            width: calc(100% - 102px);
+            max-width: calc(100% - 102px);
           }
         }
         $width100: calc(100% - 125px);
@@ -258,7 +259,7 @@
     text-align: left;
     max-height: none;
     margin: 50px 0;
-    min-width: 966px;
+    min-width: 1080px;
   }
 }
 
@@ -281,9 +282,9 @@
   }
 }
 .right-btn{
-  right: calc(50% - 535px);
+  right: calc(50% - 527px);
   text-align: right;
 }
 .left-btn{
-  left: calc(50% - 535px);
+  left: calc(50% - 527px);
 }
